header quick alignment fix

--- a/src/mrs/static/sass/Header.sass
+++ b/src/mrs/static/sass/Header.sass
@@ -148,7 +148,6 @@
       .logo-mrs
         background-color: white
         height: $headerHeight
-        margin-top: 2rem
 
     .burger--wrapper
       display: none
